src/native/jalium.native.platform/include/jalium_platform.h


typedef struct JaliumPlatformWindow JaliumPlatformWindow;
typedef struct JaliumDispatcher JaliumDispatcher;
typedef struct JaliumTimer JaliumTimer;
typedef uint16_t JaliumUtf16Char;
typedef struct JaliumDragDataItem {
    const char* mimeType;
    const uint8_t* data;
    uint32_t dataSize;
} JaliumDragDataItem;
typedef struct JaliumDragImage {
    const uint8_t* bgraPixels;
    uint32_t width;
    uint32_t height;
    uint32_t stride;
    int32_t hotspotX;
    int32_t hotspotY;
} JaliumDragImage;
typedef void (*JaliumDispatcherCallback)(void* userData);
typedef void (*JaliumTimerCallback)(void* userData);
JALIUM_PLATFORM_API int32_t jalium_platform_run_message_loop(void);
JALIUM_PLATFORM_API int32_t jalium_platform_poll_events(void);
JALIUM_PLATFORM_API void jalium_platform_quit(int32_t exitCode);
JALIUM_PLATFORM_API JaliumResult jalium_dispatcher_create(
    JaliumDispatcher** outDispatcher);
JALIUM_PLATFORM_API void jalium_dispatcher_destroy(JaliumDispatcher* dispatcher);
JALIUM_PLATFORM_API void jalium_dispatcher_wake(JaliumDispatcher* dispatcher);
JALIUM_PLATFORM_API void jalium_dispatcher_set_callback(
    JaliumDispatcher* dispatcher,
    JaliumDispatcherCallback callback,
    void* userData);
JALIUM_PLATFORM_API JaliumResult jalium_timer_create(JaliumTimer** outTimer);
JALIUM_PLATFORM_API void jalium_timer_destroy(JaliumTimer* timer);
JALIUM_PLATFORM_API void jalium_timer_arm(
    JaliumTimer* timer,
    int64_t intervalMicroseconds);
JALIUM_PLATFORM_API void jalium_timer_arm_repeating(
    JaliumTimer* timer,
    int64_t intervalMicroseconds);
JALIUM_PLATFORM_API void jalium_timer_disarm(JaliumTimer* timer);
JALIUM_PLATFORM_API void jalium_timer_set_callback(
    JaliumTimer* timer,
    JaliumTimerCallback callback,
    void* userData);
JALIUM_PLATFORM_API int32_t jalium_timer_wait(
    JaliumTimer* timer,
    uint32_t timeoutMs);
JALIUM_PLATFORM_API float jalium_platform_get_system_dpi_scale(void);
typedef struct JaliumMonitorInfo {
    int32_t x;
    int32_t y;
    int32_t width;
    int32_t height;
    int32_t workX;
    int32_t workY;
    int32_t workWidth;
    int32_t workHeight;
    float   scale;
    int32_t refreshRate;
    int32_t isPrimary;
} JaliumMonitorInfo;
JALIUM_PLATFORM_API int32_t jalium_platform_get_monitor_count(void);
JALIUM_PLATFORM_API int32_t jalium_platform_get_monitor_info(
    int32_t index,
    JaliumMonitorInfo* info);
JALIUM_PLATFORM_API int32_t jalium_window_set_min_max_size(
    JaliumPlatformWindow* window,
    int32_t minWidth,
    int32_t minHeight,
    int32_t maxWidth,
    int32_t maxHeight);
JALIUM_PLATFORM_API int32_t jalium_window_begin_move_drag(
    JaliumPlatformWindow* window);
JALIUM_PLATFORM_API int32_t jalium_window_begin_resize_drag(
    JaliumPlatformWindow* window,
    int32_t edge);
JALIUM_PLATFORM_API int32_t jalium_window_set_icon(
    JaliumPlatformWindow* window,
    const uint32_t* bgraPixels,
    int32_t width,
    int32_t height);
JALIUM_PLATFORM_API int32_t jalium_window_set_topmost(
    JaliumPlatformWindow* window,
    int32_t topmost);
JALIUM_PLATFORM_API int32_t jalium_window_set_enabled(
    JaliumPlatformWindow* window,
    int32_t enabled);
JALIUM_PLATFORM_API int32_t jalium_window_set_opacity(
    JaliumPlatformWindow* window,
    double opacity);
JALIUM_PLATFORM_API int32_t jalium_window_set_show_in_taskbar(
    JaliumPlatformWindow* window,
    int32_t showInTaskbar);
JALIUM_PLATFORM_API int32_t jalium_window_set_resizable(
    JaliumPlatformWindow* window,
    int32_t resizable);
JALIUM_PLATFORM_API int32_t jalium_window_set_decorated(
    JaliumPlatformWindow* window,
    int32_t decorated);
JALIUM_PLATFORM_API int32_t jalium_window_set_owner(
    JaliumPlatformWindow* window,
    intptr_t ownerNativeHandle);
JALIUM_PLATFORM_API int32_t jalium_window_activate(
    JaliumPlatformWindow* window);
JALIUM_PLATFORM_API int32_t jalium_window_show_system_menu(
    JaliumPlatformWindow* window,
    int32_t x,
    int32_t y);
JALIUM_PLATFORM_API int16_t jalium_input_get_key_state(int32_t jaliumVirtualKey);
JALIUM_PLATFORM_API JaliumResult jalium_input_get_touch_capabilities(
    int32_t* touchPresent,
    int32_t* maxContacts);
JALIUM_PLATFORM_API JaliumResult jalium_platform_set_double_click_settings(
    uint32_t milliseconds,
    float distance);
JALIUM_PLATFORM_API JaliumResult jalium_input_get_cursor_pos(float* x, float* y);
typedef void (*JaliumDragFeedbackCallback)(
    uint32_t effect,
    void* userData);
typedef JaliumDragContinueAction (*JaliumDragQueryContinueCallback)(
    uint32_t keyStates,
    int32_t escapePressed,
    void* userData);
JALIUM_PLATFORM_API void jalium_drag_set_effect(
    JaliumPlatformWindow* window,
    uint64_t sessionId,
    uint32_t effect);
JALIUM_PLATFORM_API JaliumResult jalium_drag_begin(
    JaliumPlatformWindow* window,
    const JaliumDragDataItem* items,
    uint32_t itemCount,
    uint32_t allowedEffects,
    uint32_t* performedEffect);
JALIUM_PLATFORM_API JaliumResult jalium_drag_begin_ex(
    JaliumPlatformWindow* window,
    const JaliumDragDataItem* items,
    uint32_t itemCount,
    uint32_t allowedEffects,
    JaliumDragFeedbackCallback feedbackCallback,
    JaliumDragQueryContinueCallback queryContinueCallback,
    void* callbackUserData,
    uint32_t* performedEffect);
JALIUM_PLATFORM_API JaliumResult jalium_drag_begin_with_image(
    JaliumPlatformWindow* window,
    const JaliumDragDataItem* items,
    uint32_t itemCount,
    uint32_t allowedEffects,
    JaliumDragFeedbackCallback feedbackCallback,
    JaliumDragQueryContinueCallback queryContinueCallback,
    void* callbackUserData,
    const JaliumDragImage* dragImage,
    uint32_t* performedEffect);
typedef JaliumDragDataItem JaliumClipboardDataItem;
JALIUM_PLATFORM_API JaliumResult jalium_clipboard_get_formats(char** outMimeTypes);
JALIUM_PLATFORM_API JaliumResult jalium_clipboard_get_data(
    const char* mimeType,
    uint8_t** outData,
    uint32_t* outDataSize);
JALIUM_PLATFORM_API JaliumResult jalium_clipboard_set_data(
    const JaliumClipboardDataItem* items,
    uint32_t itemCount);
JALIUM_PLATFORM_API JaliumResult jalium_clipboard_clear(void);
JALIUM_PLATFORM_API JaliumResult jalium_clipboard_get_text(JaliumUtf16Char** outText);
JALIUM_PLATFORM_API JaliumResult jalium_clipboard_set_text(const JaliumUtf16Char* text);
JALIUM_PLATFORM_API void jalium_platform_free(void* ptr);