src/managed/Jalium.UI.Interop/NativeMethods.cs


    /// <summary>Mirror of the native JaliumMonitorInfo struct (jalium_platform.h).</summary>
    [StructLayout(LayoutKind.Sequential)]
    internal struct NativeMonitorInfo
    {
        public int X;
        public int Y;
        public int Width;
        public int Height;
        public int WorkX;
        public int WorkY;
        public int WorkWidth;
        public int WorkHeight;
        public float Scale;
        public int RefreshRate;
        public int IsPrimary;
    }

    [LibraryImport(PlatformLib, EntryPoint = "jalium_platform_get_monitor_count")]
    internal static partial int PlatformGetMonitorCount();

    [LibraryImport(PlatformLib, EntryPoint = "jalium_platform_set_double_click_settings")]
    internal static partial int PlatformSetDoubleClickSettings(uint milliseconds, float distance);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_platform_get_monitor_info")]
    internal static partial int PlatformGetMonitorInfo(int index, out NativeMonitorInfo info);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_set_min_max_size")]
    internal static partial int WindowSetMinMaxSize(
        nint window, int minWidth, int minHeight, int maxWidth, int maxHeight);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_begin_move_drag")]
    internal static partial int WindowBeginMoveDrag(nint window);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_begin_resize_drag")]
    internal static partial int WindowBeginResizeDrag(nint window, int edge);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_set_icon")]
    internal static partial int WindowSetIcon(
        nint window, [In] uint[]? bgraPixels, int width, int height);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_set_topmost")]
    internal static partial int WindowSetTopmost(nint window, int topmost);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_set_enabled")]
    internal static partial int WindowSetEnabled(nint window, int enabled);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_set_opacity")]
    internal static partial int WindowSetOpacity(nint window, double opacity);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_set_show_in_taskbar")]
    internal static partial int WindowSetShowInTaskbar(nint window, int showInTaskbar);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_set_resizable")]
    internal static partial int WindowSetResizable(nint window, int resizable);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_set_decorated")]
    internal static partial int WindowSetDecorated(nint window, int decorated);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_set_owner")]
    internal static partial int WindowSetOwner(nint window, nint ownerNativeHandle);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_activate")]
    internal static partial int WindowActivate(nint window);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_window_show_system_menu")]
    internal static partial int WindowShowSystemMenu(nint window, int x, int y);

    // --- Event Loop ---

    [LibraryImport(PlatformLib, EntryPoint = "jalium_platform_run_message_loop")]
    internal static partial int PlatformRunMessageLoop();

    [LibraryImport(PlatformLib, EntryPoint = "jalium_platform_poll_events")]
    internal static partial int PlatformPollEvents();

    [LibraryImport(PlatformLib, EntryPoint = "jalium_platform_quit")]
    internal static partial void PlatformQuit(int exitCode);

    // --- Dispatcher ---

    [LibraryImport(PlatformLib, EntryPoint = "jalium_dispatcher_create")]
    internal static partial int DispatcherCreate(out nint dispatcher);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_dispatcher_destroy")]
    internal static partial void DispatcherDestroy(nint dispatcher);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_dispatcher_wake")]
    internal static partial void DispatcherWake(nint dispatcher);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_dispatcher_set_callback")]
    internal static partial void DispatcherSetCallback(nint dispatcher, nint callback, nint userData);

    // --- Timer ---

    [LibraryImport(PlatformLib, EntryPoint = "jalium_timer_create")]
    internal static partial int TimerCreate(out nint timer);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_timer_destroy")]
    internal static partial void TimerDestroy(nint timer);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_timer_arm")]
    internal static partial void TimerArm(nint timer, long intervalMicroseconds);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_timer_arm_repeating")]
    internal static partial void TimerArmRepeating(nint timer, long intervalMicroseconds);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_timer_disarm")]
    internal static partial void TimerDisarm(nint timer);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_timer_set_callback")]
    internal static partial void TimerSetCallback(nint timer, nint callback, nint userData);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_timer_wait")]
    internal static partial int TimerWait(nint timer, uint timeoutMs);

    // --- DPI ---

    [LibraryImport(PlatformLib, EntryPoint = "jalium_platform_get_system_dpi_scale")]
    internal static partial float PlatformGetSystemDpiScale();

    // --- Input ---

    [LibraryImport(PlatformLib, EntryPoint = "jalium_input_get_key_state")]
    internal static partial short InputGetKeyState(int virtualKey);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_input_get_touch_capabilities")]
    internal static partial int InputGetTouchCapabilities(
        out int touchPresent,
        out int maxContacts);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_input_get_cursor_pos")]
    internal static partial JaliumResult InputGetCursorPos(out float x, out float y);

    // --- Drag and Drop ---

    [LibraryImport(PlatformLib, EntryPoint = "jalium_drag_set_effect")]
    internal static partial void DragSetEffect(nint window, ulong sessionId, uint effect);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_drag_begin")]
    internal static partial int DragBegin(
        nint window, nint items, uint itemCount, uint allowedEffects,
        out uint performedEffect);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_drag_begin_ex")]
    internal static partial int DragBeginEx(
        nint window, nint items, uint itemCount, uint allowedEffects,
        nint feedbackCallback, nint queryContinueCallback, nint callbackUserData,
        out uint performedEffect);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_drag_begin_with_image")]
    internal static partial int DragBeginWithImage(
        nint window, nint items, uint itemCount, uint allowedEffects,
        nint feedbackCallback, nint queryContinueCallback, nint callbackUserData,
        nint dragImage, out uint performedEffect);

    // --- Clipboard ---

    [LibraryImport(PlatformLib, EntryPoint = "jalium_clipboard_get_text")]
    internal static partial int ClipboardGetText(out nint text);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_clipboard_set_text", StringMarshalling = StringMarshalling.Utf16)]
    internal static partial int ClipboardSetText(string text);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_clipboard_get_formats")]
    internal static partial int ClipboardGetFormats(out nint mimeTypes);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_clipboard_get_data", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int ClipboardGetData(string mimeType, out nint data, out uint dataSize);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_clipboard_set_data")]
    internal static partial int ClipboardSetData(nint items, uint itemCount);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_clipboard_clear")]
    internal static partial int ClipboardClear();

    [LibraryImport(PlatformLib, EntryPoint = "jalium_platform_free")]
    internal static partial void PlatformFree(nint ptr);

    // --- Android-specific ---

    [LibraryImport(PlatformLib, EntryPoint = "jalium_android_set_native_window")]
    internal static partial void AndroidSetNativeWindow(nint nativeWindow, int width, int height);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_android_set_density")]
    internal static partial void AndroidSetDensity(float density);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_android_set_refresh_rate")]
    internal static partial void AndroidSetRefreshRate(int refreshRate);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_android_on_pause")]
    internal static partial void AndroidOnPause();

    [LibraryImport(PlatformLib, EntryPoint = "jalium_android_on_resume")]
    internal static partial void AndroidOnResume();

    [LibraryImport(PlatformLib, EntryPoint = "jalium_android_on_destroy")]
    internal static partial void AndroidOnDestroy();

    [LibraryImport(PlatformLib, EntryPoint = "jalium_android_on_low_memory")]
    internal static partial void AndroidOnLowMemory();

    [LibraryImport(PlatformLib, EntryPoint = "jalium_android_set_jni_env")]
    internal static partial void AndroidSetJniEnv(nint javaVM, nint activity);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_android_set_safe_area_insets")]
    internal static partial void AndroidSetSafeAreaInsets(float top, float bottom, float left, float right);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_android_set_keyboard_visible")]
    internal static partial void AndroidSetKeyboardVisible(int visible, int heightPx);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_android_set_orientation")]
    internal static partial void AndroidSetOrientation(int orientation);

    // Input injection (called from managed Activity touch/key overrides)
    [LibraryImport(PlatformLib, EntryPoint = "jalium_android_inject_touch")]
    internal static partial void AndroidInjectTouch(
        int pointerId, float x, float y, float pressure,
        int action, int pointerType, int modifiers, long eventTimeMillis);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_android_inject_key")]
    internal static partial void AndroidInjectKey(
        int androidKeyCode, int scanCode,
        int action, int metaState, int repeatCount);

    [LibraryImport(PlatformLib, EntryPoint = "jalium_android_inject_char")]
    internal static partial void AndroidInjectChar(uint codepoint);

    #endregion
}

/// <summary>
/// Window creation parameters for the platform library.
/// </summary>
[StructLayout(LayoutKind.Sequential)]
internal struct NativePlatformWindowParams
{
    public nint Title;    // const uint16_t* (null-terminated UTF-16)
    public int X;
    public int Y;
    public int Width;
    public int Height;
    public uint Style;
    public nint ParentHandle;
}

/// <summary>One UTF-8 MIME representation passed to the native drag source.</summary>
[StructLayout(LayoutKind.Sequential)]
internal struct NativeDragDataItem
{
    public nint MimeType;
    public nint Data;
    public uint DataSize;
}

/// <summary>Straight-alpha BGRA32 image shown by a native drag source.</summary>
[StructLayout(LayoutKind.Sequential)]
internal struct NativeDragImage
{
    public nint BgraPixels;
    public uint Width;
    public uint Height;
    public uint Stride;
    public int HotspotX;
    public int HotspotY;
}
